<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nihar.java_assignment.foureverhungry.local.interfaces.SearchPage">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView3"
        android:textSize="@dimen/title_text_size"
       android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="@dimen/activity_title_top_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/search_options"
        android:id="@+id/textView5"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Location"
            android:id="@+id/textView6"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:minWidth="150dp"
            />

        <EditText
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:text="Current"
            android:id="@+id/editText"
 />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listingsParentLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Cuisine"
            android:id="@+id/textView7"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:minWidth="150dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:text="ANY"
            android:id="@+id/editText9"
            android:layout_weight="1" />

        Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/input_cuisine"
            android:spinnerMode="dropdown"
            android:entries="@array/cuisines"
            android:layout_marginLeft="30dp"
            android:textAlignment="center"
            android:maxWidth="100dp"
            android:prompt="@string/cuisine_prompt"
 />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/listingsParentLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"

        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Rating"
            android:id="@+id/textView8"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:minWidth="150dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner"
            android:spinnerMode="dropdown"
            android:entries="@array/ratings"
            android:layout_marginLeft="40dp"
            android:textAlignment="center"
            android:maxWidth="100dp"
            android:prompt="@string/rating_prompt" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"

        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Distance"
            android:id="@+id/textView9"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:minWidth="150dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner2"
            android:spinnerMode="dropdown"
            android:entries="@array/distances"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:maxWidth="140dp"
            android:prompt="@string/distance_prompt" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SHOW ME THE FOOD"
        android:id="@+id/button3"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="15dp"
        android:onClick="goToListings" />


</RelativeLayout>
