<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nihar.java_assignment.foureverhungry.local.interfaces.DetailedView"
    android:background="#92f4ec">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView4"
        android:textSize="@dimen/title_text_size"
        android:layout_marginTop="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@mipmap/dominos_logo"
        android:layout_alignTop="@+id/textView15"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:src="@drawable/stars_4_5"
        android:layout_below="@+id/imageView7"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dominos_info"
        android:id="@+id/textView15"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_below="@+id/imageView3"
        android:layout_toLeftOf="@+id/imageView3"
        android:layout_toStartOf="@+id/imageView3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView8"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout6"
        android:background="#dfabf2">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView9"
            android:layout_below="@+id/textView15"
            android:layout_alignLeft="@+id/imageView8"
            android:layout_alignStart="@+id/imageView8"
            android:layout_marginLeft="20dp"
            android:src="@drawable/phone_icon"
 />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView10"
            android:layout_below="@+id/textView15"
            android:layout_alignLeft="@+id/imageView8"
            android:layout_alignStart="@+id/imageView8"
            android:layout_marginLeft="20dp"
            android:src="@drawable/fb_logo"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Write Review"
            android:id="@+id/button17"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/linearLayout6"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"

/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_below="@+id/linearLayout6"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:background="#00ffffff"
        android:id="@+id/linearLayout5">



        <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:scrollIndicators="right"
        android:layout_below="@+id/linearLayout6"
        android:clickable="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout7">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/reviews"
                    android:id="@+id/textView16"
                    android:layout_gravity="center_vertical" />

           </LinearLayout>


        </ScrollView>
    </LinearLayout>




</RelativeLayout>
